# roma-01

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  README.zh-CN.md  docker-compose.yml
backend/: .env.example  .gitignore  ACCOUNT_SETUP.md  Dockerfile  README.md  pyproject.toml  setup.sh  start.sh
backend/config/: QUICK_START.md  README.md  README.zh-CN.md  README_CONFIG.md  README_CONFIG.zh-CN.md  trading_config.yaml  trading_config.yaml.example
backend/config/models/: claude-sonnet-4.5.yaml  deepseek-chat-v3.1.yaml  gemini-2.5-pro.yaml  gpt-5.yaml  grok-4.yaml  qwen3-max.yaml
backend/prompts/: chat_en.md  chat_token_analysis_en.md  chat_token_analysis_zh.md  chat_zh.md  system_en.md  system_zh.md  trade_analysis_en.md  trade_analysis_zh.md
backend/src/roma_trading/: __init__.py  main.py
backend/src/roma_trading/agents/: __init__.py  agent_manager.py  trading_agent.py
backend/src/roma_trading/api/: __init__.py  main.py
backend/src/roma_trading/api/routes/: __init__.py  config.py  x402.py
backend/src/roma_trading/api/schemas/: x402.py
backend/src/roma_trading/config/: __init__.py  settings.py
backend/src/roma_trading/core/: __init__.py  analysis_scheduler.py  analytics.py  chat_service.py  decision_logger.py  performance.py  remote_strategy_client.py  security.py  strategy_advisor.py  token_analysis_handler.py  trade_history_analyzer.py
backend/src/roma_trading/prompts/: __init__.py
backend/src/roma_trading/toolkits/: __init__.py  aster_toolkit.py  base_dex.py  hyperliquid_toolkit.py  technical_analysis.py
docs/: DOCKER_DEPLOYMENT.md  I18N_GUIDE.md  README.md
docs/api/: examples.md  rest-api.md  websocket.md
frontend/: Dockerfile  UI_REDESIGN.md  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+62 files in other folders)
